<resources>
<string name="app_name">Chess</string>
<string name="app_name_play">Chess - play</string>
<string name="app_name_playonline">Chess - play online</string>
<string name="app_name_setup">Chess - Setup</string>
<string name="app_name_help">Chess - help</string>
<string name="app_name_import">Chess - import</string>
<string name="app_name_pgntools">Chess - advanced</string>
<string name="app_name_save_games">Saved games</string>
<string name="language">en</string>
<string name="start_play">Play</string>
<string name="start_lessons">Lessons</string>
<string name="start_practice">Practice</string>
<string name="start_puzzles">Puzzles</string>
<string name="start_about">About</string>
<string name="start_pgn">Advanced</string>
<string name="start_ics">Play online</string>
<string name="start_globalpreferences">Preferences</string>
<string name="start_exit">Exit</string>
<string name="start_convergence">TV Screen</string>
<string name="globalpreferences">Chess - global preferences</string>
<string name="pref_wakelock">Use wake lock</string>
<string name="pref_wakelock_desc">This will prevent your phone going to sleep</string>
<string name="pref_colorscheme">Color scheme</string>
<string name="pref_colorscheme_desc">Colors for the board tiles</string>
<string name="pref_showCoords">Coordinates</string>
<string name="pref_showCoords_desc">Show board coordinates</string>
<string name="pref_showLastMove">Show last move</string>
<string name="pref_showLastMove_desc">Shows the last move with higlighted squares</string>
<string name="pref_sound">Sound</string>
<string name="pref_sound_desc">Played when your opponent moves</string>
<string name="pref_speech">Speech</string>
<string name="pref_speech_desc">Tells the move that was made</string>
<string name="pref_eco">ECO info</string>
<string name="pref_eco_desc">Show ECO opening info when available</string>
<string name="pref_extrahighlight">Extra highlight</string>
<string name="pref_extrahighlight_desc">Make move highlighting extra visible</string>
<string name="pref_fullscreen">Enable full screen</string>
<string name="pref_fullscreen_desc">Recommended for small screens and landscape view; elements may fall off the screen otherwise</string>
<string name="pref_onLoadJumpToLastMove">Jump to last move</string>
<string name="pref_onLoadJumpToLastMove_desc">When resuming the App, jump to the last move</string>
<string name="pref_uci">UCI Engine</string>
<string name="pref_uci_desc">Select the chess engine to use</string>
<string name="pref_pieceset">Piece set</string>
<string name="pref_pieceset_desc">The kind of piece set to display</string>
<string name="pref_tileset">Square pattern</string>
<string name="pref_tileset_desc">Pattern used on a board square</string>
<string name="pref_icsconfirmmove">Confirm move</string>
<string name="pref_icsconfirmmove_desc">Manually confirm a move</string>
<string name="pref_icscustomcommand">Custom commands</string>
<string name="pref_icscustomcommand_desc">Create your own custom commands</string>
<string name="pref_icsautosought">Auto sought</string>
<string name="pref_icsautosought_desc">Refresh the challenges screen automatically</string>
<string name="pref_puzzle_show_seekbar">Show seek bar</string>
<string name="pref_puzzle_show_seekbar_desc">Quickly navigate through puzzles with seek bar</string>
<string name="button_play">Play</string>
<string name="button_undo">Undo</string>
<string name="button_ok">OK</string>
<string name="button_menu">Menu</string>
<string name="button_cancel">Cancel</string>
<string name="button_login">Login</string>
<string name="button_register">Register</string>
<string name="button_close">Close</string>
<string name="button_save">Save</string>
<string name="button_save_copy">Save copy</string>
<string name="alert_yes">Yes</string>
<string name="alert_no">No</string>
<string name="alert_cancel">Cancel</string>
<string name="alert_ok">OK</string>
<string name="title_challenge">Challenge</string>
<string name="title_loading">Loading...</string>
<string name="title_error">Error</string>
<string name="title_offers_abort">Abort request</string>
<string name="title_offers_takeback">Take back request</string>
<string name="title_offers_draw">Draw request</string>
<string name="title_offers_adjourn">Adjourn request</string>
<string name="title_pick_level">Pick playing level</string>
<string name="title_pick_wakelock">Pick wake lock option</string>
<string name="title_info">Info</string>
<string name="title_menu">Menu</string>
<string name="title_welcome">Welcome</string>
<string name="title_annotate">Annotate</string>
<string name="title_save_game">Save game</string>
<string name="title_options">Options</string>
<string name="title_delete_game">Delete game</string>
<string name="title_notice">Notice</string>
<string name="title_pick_promo">Pick promotion piece</string>
<string name="title_castle">Castle?</string>
<string name="title_pick_en_passant">En-passant file</string>
<string name="title_pick_colorscheme">Choose color</string>
<string name="title_pick_playmode">Choose play mode</string>
<string name="title_create_new_line">Create new line?</string>
<string name="title_chess960_manual_random">Chess 960 :: Manual position nr or random?</string>
<string name="title_edit_or_delete">Edit or delete?</string>
<string name="title_edit_command">Edit command</string>
<string name="title_ics_mode_idle">Idle</string>
<string name="title_ics_mode_play">Play</string>
<string name="title_ics_mode_watch">Watch</string>
<string name="title_ics_mode_examine">Examine</string>
<string name="title_ics_mode_puzzle">Puzzle</string>
<string name="title_ics_mode_endgame">Endgame</string>
<string name="menu_help">Help</string>
<string name="menu_new">New Game</string>
<string name="menu_clear">Clear</string>
<string name="menu_options">Options</string>
<string name="menu_email_game">E-mail game</string>
<string name="menu_clip_pgn">Game to clip board</string>
<string name="menu_fromclip">Game from clip board</string>
<string name="menu_save_game">Save game</string>
<string name="menu_load_game">Load game</string>
<string name="menu_random_fischer">Chess 960</string>
<string name="menu_puzzles">Puzzles</string>
<string name="menu_practice">Practice</string>
<string name="menu_pgn_tool">PGN tool</string>
<string name="menu_about">About</string>
<string name="menu_exit">Exit</string>
<string name="menu_flip">Flip board</string>
<string name="menu_more">More…</string>
<string name="menu_setup">Setup board</string>
<string name="menu_from_qrcode">From QR-code</string>
<string name="menu_to_qrcode">To QR-code</string>
<string name="menu_new_command">New command</string>
<string name="menu_set_clock">Set clock</string>
<string name="menu_subview_title">Choose sub controls</string>
<string name="menu_subview_cpu">Engine info</string>
<string name="menu_subview_moves">Move history</string>
<string name="menu_subview_seek">Move seek bar</string>
<string name="menu_subview_captured">Captured pieces</string>
<string name="menu_subview_annotate">Annotate move</string>
<string name="menu_subview_guess">Guess the move</string>
<string name="menu_subview_blindfold">Blindfold mode</string>
<string name="options_play_android">Play vs Android</string>
<string name="options_960">Chess 960 - Fischer Random</string>
<string name="options_load_database">Load openings database</string>
<string name="options_auto_flip">Auto flip board</string>
<string name="options_flip">Flip board</string>
<string name="options_setup">Setup board</string>
<string name="options_show_moves">Show moves</string>
<string name="state_play">in play</string>
<string name="state_draw">draw</string>
<string name="state_draw_material">draw (material)</string>
<string name="state_draw_50">draw (50 move rule)</string>
<string name="state_draw_stalemate">draw (stalemate)</string>
<string name="state_draw_repeat">draw (3-fold repetition)</string>
<string name="state_mate">mate</string>
<string name="state_check">check</string>
<string name="state_time">time</string>
<string name="state_resigned">resigned</string>
<string name="state_aborted">aborted</string>
<string name="state_adjourned">adjourned</string>
<string name="level_format">Level: %s</string>
<string name="choice_level_1">1 sec</string>
<string name="choice_level_2">2 sec </string>
<string name="choice_level_3">4 sec</string>
<string name="choice_level_4">8 sec (average) </string>
<string name="choice_level_5">10 sec</string>
<string name="choice_level_6">20 sec</string>
<string name="choice_level_7">30 sec (experienced) </string>
<string name="choice_level_8">1 minute</string>
<string name="choice_level_9">5 minutes</string>
<string name="choice_level_10">15 minutes</string>
<string name="choice_queen">Queen</string>
<string name="choice_rook">Rook</string>
<string name="choice_bishop">Bishop</string>
<string name="choice_knight">Knight</string>
<string name="choice_match_rated">Rated</string>
<string name="choice_match_unrated">Unrated</string>
<string name="choice_clock_num_minutes">%d minutes</string>
<string name="choice_manually">Manually</string>
<string name="choice_edit">Edit</string>
<string name="choice_delete">Delete</string>
<string name="msg_illegal_move">Illegal move</string>
<string name="msg_state_format">%1$s</string>
<string name="msg_thinking">Thinking...</string>
<string name="msg_wait">Please wait...</string>
<string name="msg_calc_format">Move %1$s\tEvaluations %2$s</string>
<string name="msg_calc_summary_format">Engine summary: %1$s</string>
<string name="msg_setup_turn">Turn</string>
<string name="msg_setup_turn_white">white</string>
<string name="msg_setup_turn_black">black</string>
<string name="msg_setup_enpassant">En-passant square</string>
<string name="msg_setup_castle_white">White</string>
<string name="msg_setup_castle_black">Black</string>
<string name="msg_setup_extra">Press menu for setup options</string>
<string name="msg_qr_code_on_clipboard">Link to QR code is on your clipboard...</string>
<string name="chess960_position_nr">"Chess 960 position nr %d"</string>
<string name="msg_ics_enter_handle">Please enter your handle</string>
<string name="msg_ics_enter_password">Please enter your password</string>
<string name="err_sd_not_mounted">
In order to process your request, your SD-card needs to be mounted.
</string>
<string name="err_send_email">
E-mail could not be created.
</string>
<string name="err_load_fen">FEN chess position could not be loaded</string>
<string name="err_load_pgn">PGN chess history could not be loaded</string>
<string name="err_no_clip_text">There is no text on the clip board</string>
<string name="err_install_barcode_scanner">Please install Barcode scanner (ZXing)</string>
<string name="err_chess960_position_range">Invalid position, enter a number between 0 and 960</string>
<string name="err_chess960_postion_format">Invalid position, enter a number</string>
<string name="pgntool_export_explanation">Export game database to sd-card</string>
<string name="pgntool_import_explanation">Import games into the game database</string>
<string name="pgntool_delete_explanation">Delete all games in the game database</string>
<string name="pgntool_add_db_explanation">Add games to openingdatabase</string>
<string name="pgntool_create_db_explanation">Create openingdatabase</string>
<string name="pgntool_point_db_explanation">Set openingdatabase</string>
<string name="pgntool_point_uci_engine">Install UCI engine</string>
<string name="pgntool_unset_uci_engine">Uninstall UCI engine</string>
<string name="pgntool_help">Help</string>
<string name="pgntool_numexport">Exported %1$d games to chess.pgn</string>
<string name="pgntool_confirm_delete">Are you sure?</string>
<string name="pgntool_deleted">All games deleted</string>
<string name="pgntool_create_practice_explanation">Create practice set</string>
<string name="pgntool_import_practice">Import practice set</string>
</resources>