<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/LayoutMain"
>
	<RelativeLayout android:id="@+id/LayoutSetupTitle" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginBottom="2dip"
		android:background="@color/bgColorText" 
		>
		<TextView android:id="@+id/TextViewTitle" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			style="@style/MyHeaderTextStyle"
			android:text="@string/app_name_setup"
		/>
			
	</RelativeLayout>
	 
	<include
        layout="@layout/board"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/includeboard"
        android:layout_below="@id/LayoutSetupTitle" 
    /> 
	<!-- 
	<TextView android:layout_width="wrap_content" android:layout_height="320dip"
        android:id="@+id/includeboard" android:layout_below="@id/LayoutSetupTitle" 
	/>
     -->
        
	<TableLayout android:id="@+id/SelectPiecesLayout"
		android:layout_marginTop="2dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@color/bgColorText"
		android:layout_below="@id/includeboard" android:padding="2dip" 
		android:gravity="center">
		<TableRow>
			<jwtc.android.chess.ChessImageView  android:id="@+id/selQueen" 
				android:layout_width="40dip" android:layout_height="40dip"
				android:layout_margin="2dip"/>
			<jwtc.android.chess.ChessImageView  android:id="@+id/selRook" 
				android:layout_width="40dip" android:layout_height="40dip"
				android:layout_margin="2dip"/>
			<jwtc.android.chess.ChessImageView  android:id="@+id/selBishop" 
				android:layout_width="40dip" android:layout_height="40dip"
				android:layout_margin="2dip"/>
			<jwtc.android.chess.ChessImageView  android:id="@+id/selKnight" 
				android:layout_width="40dip" android:layout_height="40dip"  
				android:layout_margin="2dip"/>
			<jwtc.android.chess.ChessImageView  android:id="@+id/selPawn" 
				android:layout_width="40dip" android:layout_height="40dip" 
				android:layout_margin="2dip"/>
			<ImageButton android:id="@+id/delPiece" 
				android:layout_width="40dip" android:layout_height="40dip"  
				android:src="@drawable/content_discard" android:layout_margin="2dip"/>
			<ImageButton android:id="@+id/selColor" android:src="@drawable/av_shuffle"
				android:layout_width="40dip" android:layout_height="40dip" 
				android:layout_margin="2dip" />
		</TableRow>	
	</TableLayout>
    <TableLayout
    	android:id="@+id/TableSetupButtons" 
    	android:layout_width="fill_parent" android:layout_height="wrap_content"
    	android:layout_below="@id/SelectPiecesLayout" android:background="@color/bgColorText"
    	android:layout_marginTop="2dip"
    	android:stretchColumns="*"
    >
    	<TableRow>
    		<Button android:id="@+id/ButtonSetupCancel"
    			android:text="@string/button_cancel" 
    			android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    		<Button android:id="@+id/ButtonSetupOk"
    			android:text="@string/button_ok" 
    			android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    	</TableRow>
    
    </TableLayout>
    <TextView android:id="@+id/TextViewSetupMsg" 
    	android:layout_width="fill_parent" android:layout_height="wrap_content"
    	style="@style/MySmallTextStyle"
    	android:text="@string/msg_setup_extra"
    	android:layout_below="@id/TableSetupButtons"
    />
	
	
</RelativeLayout>